--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .lead-image {
-    background-image: url(./pictures/couch.jpg);
+    background-image: url(../pictures/couch.jpg);
     height: 100vh;
     width: 100vw;
     position: relative;
