--- a/public/stylesheets/tertiarystyles.css
+++ b/public/stylesheets/tertiarystyles.css
@@ -2,7 +2,7 @@ body {
     margin: 20px;
     font-family: "cursive", Georgia, Times, 'Times New Roman', serif;
     overflow-x: hidden;
-    background-image: url(./pictures/3rd.jpg);
+    background-color: #12101a;;
 }
 
 h1 {
@@ -11,6 +11,12 @@ h1 {
     justify-content: center;
     flex-direction: column;
     font-size: 40px;
+    color: lightgray;
+}
+
+#back {
+    text-decoration: none;
+    color:lightgrey;
 }
 
 p {
@@ -21,6 +27,7 @@ p {
     border: solid;
     border-radius: 1rem;
     font-size: 22px;
+    color: lightgray;
 }
 
 .box-container1 {
@@ -33,14 +40,30 @@ p {
 
 }
 
-.box-item-1, .box-item-2,
-.box-item-3, .box-item-4, 
-.box-item-5, .box-item-6,
-.box-item-7, .box-item-8 { 
-    border: solid;
+.box-item { 
+    /* border: solid; */
     height: 300px;
     width: 400px;
+    box-shadow: 0px 0px 25px rgb(247, 248, 202);
+    border-radius: 3px;
 }
+
+.box-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+.box-item img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
+}
+
+
+
+
+
 
 
 
@@ -66,3 +89,4 @@ p {
            min-height: fit-content;
     }
 }
+
