--- a/public/stylesheets/secondarystyles.css
+++ b/public/stylesheets/secondarystyles.css
@@ -11,6 +11,12 @@ h1, #logo {
     text-decoration: none;
     font-weight: bold;
 }
+.btn {
+    cursor: pointer;
+    background-color: rgb(212, 193, 143);
+    color: rgb(255, 255, 255);
+    border: solid;
+}
 #addLink {
     color: black;
     font-size: 25px;
