--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -12,6 +12,13 @@ body {
     background-size: cover;
     background-position: 50% 50%;
   }
+
+  .btn {
+      cursor: pointer;
+      background-color: rgb(212, 193, 143);
+      color: rgb(255, 255, 255);
+      border: solid;
+  }
   
   .overlay {
     width: 100%;
